# Paper-Grouper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Teste-Matheus/: maluco.py
paper_grouper/: __init__.py  app_controller.py  app_controller.py.bak  app_entry.py
paper_grouper/core/: __init__.py  autotune.py  cluster_postprocess.py  community_detector.py  data.py  embedder.py  graph_builder.py  metadata_extractor.py  scoring.py
paper_grouper/io/: __init__.py  file_scanner.py  graph_visualizer.py  output_writer.py  persistence.py  report_writer.py
paper_grouper/ui/: __init__.py  main_window.py
tests/: test_scoring.py
