[tool.poetry]
name = "paper-grouper"
version = "0.1.0"
description = "Interactive GUI to cluster and organize PDFs by topic"
authors = ["Matheus Augusto de Paula Oliveira <you@example.com>"]
readme = "README.md"
packages = [{ include = "paper_grouper" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.7.0"
sentence-transformers = "^3.4.1"
scikit-learn = "^1.7.2"
networkx = "^3.3"
python-louvain = "^0.16"
matplotlib = "^3.10.7"
pypdf = "^5.9.0"
python-slugify = "^8.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^24.10.0"
ruff = "^0.6.9"
mypy = "^1.18.2"
pre-commit = "^4.0.1"
types-setuptools = "^75.8.2.20250305"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
